# chip8-rs

./: Cargo.toml  LICENSE  README.md  shell.nix  toolchain.toml
src/: cpu.rs  display.rs  keypad.rs  lib.rs  main.rs  rand.rs
src/components/: cpu.rs  display.rs  keypad.rs
