[package]
name = "chip-8"
version = "0.1.0"
authors = ["Adamocho"]
edition = "2021"

[dependencies]
inquire = "0.5.3"
crossterm = "0.25.0"
minifb = "0.25.0"

[features]
default = ["window"]
debug = []
fast = []
alternate-screen = []
window = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html